modifies travis deploy config

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,4 @@ depoly:
     branch: master  
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key: 
-    secure: "$AWS_SECRET-KEY"  
+    secure: $AWS_SECRET-KEY  
