modified travis deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,4 @@ depoly:
   on:
     branch: master  
   access_key_id: $AWS_ACCESS_KEY
-  secret_access_key: 
-    secure: $AWS_SECRET-KEY  
+  secret_access_key: $AWS_SECRET-KEY  
